--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,12 @@
         <item name="android:padding">@dimen/padding_button</item>
         <item name="android:textColor">@color/button_text_color</item>
     </style>
+
+    <style name="MainStyleScore" parent="MainStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">44dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
+    </style>
 </resources>
